# veedeeoh

./: .gitignore  .vercelignore  Dockerfile  Home Directions.dc.html  LICENSE  README.md  docker-compose.yml  landing.ts  package-lock.json  package.json  pyproject.toml  railway.toml  tvlc.spec  v33o_mockup.html  vercel.json
.github/workflows/: build-windows.yml  ci.yml
api/: index.ts  proxy.ts
backend/: package-lock.json  package.json  proxy.ts  server.ts  sources.ts  store.ts  tsconfig.json  tubi.ts  vod.ts
docs/plans/: 2026-07-19-tvlc-design.md
frontend/: 404.html  change-password.html  change-password.ts  index.html  landing.html  landing.ts  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/public/: site.webmanifest
frontend/src/: api.ts  auth.ts  cards.ts  health.ts  landing_posters.json  main.ts  music.ts  ocean.ts  party.ts  player.ts  profiles.ts  pwa.ts  settings.ts  state.ts  style.css  types.ts  util.ts  view.ts  visualizer.ts  vod.ts  zzz.ts
scripts/: fetch_posters.js
src/tvlc/: __init__.py  captions.py  catalog.py  categorize.py  epg.py  health.py  m3u.py  maintenance.py  music_scanner.py  proxy.py  server.py  sources.py  store.py  thumbs.py  vod.py
src/tvlc/static/: app.js  change-password.html  index.html  landing.html  privacy.html  robots.txt  self-hosting.html  site.webmanifest  sitemap.xml  style.css  terms.html
src/tvlc/static/assets/: auth-B2Q4Vg7z.js  auth-BHuG8zSS.js  auth-BveBaVkX.js  auth-C5CiuhA6.js  auth-CSuyz-3Y.js  (+166 more)
supabase/migrations/: 20260721000000_create_waitlist.sql
tests/: test_core.py
