[project]
name = "veedeeoh"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Cojac", email = "itscojac@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.139.2",
    "faster-whisper>=1.2.1",
    "httpx>=0.28.1",
    "pillow>=12.3.0",
    "platformdirs>=4.10.1",
    "uvicorn[standard]>=0.51.0",
    "mutagen>=1.47.0",
]

[project.scripts]
tvlc = "tvlc:main"

[build-system]
requires = ["uv_build>=0.8.11,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.22",
]
